# niteru

./: .pre-commit-config.yaml  README.md  build_docs.sh  pyproject.toml
.github/workflows/: test.yml
docs/: dataclasses.html  html_parser.html  index.html  utils.html
niteru/: __init__.py  dataclasses.py  html_parser.py  similarity.py  structural_similarity.py  style_similarity.py  utils.py
tests/: test_html_parser.py  test_niteru.py  test_similarity.py  test_structual_similarity.py  test_style_similarity.py  utils.py
