[tool.poetry]
name = "niteru"
version = "0.1.0"
description = "'A set of similarity metrics to compare html files"
authors = ["Manabu Niseki <manabu.niseki@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
autoflake = "^1.4"
autopep8 = "^1.5.6"
black = "^21.4b2"
coveralls = "^3.0.1"
flake8 = "^3.9.1"
isort = "^5.8.0"
mypy = "^0.812"
pre-commit = "^2.12.0"
pytest = "^6.2.3"
pytest-cov = "^2.11.1"
pytest-mock = "^3.6.0"
pytest-randomly = "^3.7.0"
pytest-sugar = "^0.9.4"
pyupgrade = "^2.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
